Fix for some overflow issues with css grid

--- a/app/courses/[courseId]/lessons/[lessonId]/layout.module.scss
+++ b/app/courses/[courseId]/lessons/[lessonId]/layout.module.scss
@@ -2,21 +2,28 @@
   display: grid;
   height: 100dvh;
   grid-template-areas:
-    "nav nav nav nav nav"
-    "sidebar content content content content"
-    "sidebar content content content content"
-    "sidebar content content content content"
-    "sidebar content content content content";
+    "navbar navbar"
+    "aside content";
+  grid-template-rows: var(--size-60) 1fr;
+  grid-template-columns: 250px 1fr;
+}
+
+.navbarLessonLayout {
+  grid-area: navbar;
 }
 
 .asideLessonLayout {
-  height: 100%;
-  max-width: 250px;
-  grid-area: sidebar;
-
+  grid-area: aside;
   .lessonList {
-    padding: 0;
     margin: 0;
+    padding: 0;
     height: 100%;
+    overflow-y: auto;
   }
+}
+
+.contentLessonLayout {
+  grid-area: content;
+  overflow-y: auto;
+  padding: 0 var(--size-20);
 }
